--- a/lavadero/pom.xml
+++ b/lavadero/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>2.5.6</version>
+		</dependency>
+        
 	</dependencies>
 
 	<build>
